<resources>
    <string name="app_name">ARea Explorer</string>
    <string name="read_qr_code_button_text">Read QR code</string>
    <string name="home_title_text">AR / VR Map App</string>
    <string name="ar_mode_button_text">AR mode</string>
    <string name="place_3d_map_button_text">Place 3D map</string>
    <string name="addUsername">username</string>
    <string name="addPassword">password</string>
    <string name="read_QR_code">read qr code</string>
    <string name="read_qr_code">Read QR code</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="addConfirmPassword">Confirm Password</string>
    <string name="my_saved_maps">My saved maps</string>
    <string name="don_t_have_any_account_yet">Don\'t have any account yet?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logout">logout</string>
    <string name="find_plane_toast_text">Move the phone and find a plane/level first!</string>
    <string name="loading_model_text">LOADING</string>
    <string name="item_info_dashboard_category_text">Category: %s</string>
    <string name="ARmap">AR map</string>
    <string name="motion_gestures_instructions_title_text">Motion gestures</string>
    <string name="zoom_gesture_title_text">Zooming the map</string>
    <string name="remove_points_of_interest_gesture_title_text">Removing all points of interest</string>
    <string name="remove_points_of_interest_gesture_instruction_text">Shake the phone up or down to remove all the points of interest from the map.</string>
    <string name="zoom_gesture_instruction_text">Move the phone quickly right to zoom in and left to zoom out the map.</string>
    <string name="close_gesture_instructions_button_text">Close</string>
    <string name="zoom_gesture_min_size_text">This is the minimum gesture zoom level!</string>
    <string name="zoom_gesture_max_size_text">This is the maximum gesture zoom level!</string>
    <string name="remove_all_pois_dialog_title_text">Remove all points of interest</string>
    <string name="remove_all_pois_dialog_message_text">Are you sure you want to remove all the points of interest from the map?</string>
    <string name="no_pois_added_text">No points of interest added</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="open_in_ar">Open in AR</string>
    <string name="show_location_in_map">Show location on map</string>
    <string name="motion_gestures_switch_text">Motion gestures</string>
    <string name="location_already_added_text">You have already added your location on the map!</string>
    <string name="title_onboarding_1">Welcome to ARea Explorer App!</string>
    <string name="description_onboarding_1">Scan QR codes in different locations and see maps in AR.</string>
    <string name="title_onboarding_2">Try to scan your first QR code</string>
    <string name="description_onboarding_2">Press Scan QR code and bring your phone close to a code. Then press Open in AR.</string>
    <string name="title_onboarding_3">AR mode</string>
    <string name="description_onboarding_3">Swipe from left and you will find points of interest. Tap them to see them on the map.</string>
    <string name="start_text_advice">By continuing to use this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="test">Test</string>
    <string name="delete_saved_item_button_text">Delete</string>
    <string name="lm_close_button_text">Close</string>
    <string name="move_the_phone_instruction_text">Move the phone and find a plane/level</string>
    <string name="user_location_added_text">Your location is added to the map!</string>
    <string name="place_map_first_text">Place the map first!</string>
    <string name="getting_started">GETTING STARTED</string>
    <string name="background">background</string>
    <string name="application_logo">Application logo</string>
    <string name="info">info</string>
    <string name="return_to_home_screen">return to home screen</string>
    <string name="check_your_location">check your location</string>
    <string name="save_map_to_your_list">save map to your list</string>
    <string name="show_motion_gestures_instructions">show motion gestures instructions</string>
    <string name="motion_gestures_on_or_off">motion gestures on or off</string>
    <string name="navigation_drawer_indicator_arrow">navigation drawer indicator arrow</string>
    <string name="remove_points_of_interest_gestures">remove points of interest gestures</string>
    <string name="zoom_gesture">zoom gesture</string>
    <string name="instruction_video_for_ar">instruction video for ar</string>
    <string name="delete_map_from_your_list">delete map from your list</string>
    <string name="return_to_the_my_saved_maps_screen">return to the my saved maps screen</string>
    <string name="open_application">open application</string>
    <string name="set_point_of_interest_scale">Set point of interest scale</string>
    <string name="ok">OK</string>
    <string name="_3d_object_logo">3D object logo</string>
    <string name="point_of_interest">point of interest</string>
    <string name="spotlight">spotlight</string>
    <string name="username">Username must be 3 or more characters and start with capital letter</string>
    <string name="username_and_password">Username and password</string>
    <string name="password">Password must be at least 8 characters in length and have 1 capital letter</string>
    <string name="page">page</string>
</resources>