<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:padding="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_onboarding"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/application_logo"
            app:srcCompat="@drawable/testlogo4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_onboarding_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_onboarding"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/title_onboarding_1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_onboarding_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_onboarding_title"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/description_onboarding_1"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/button"
        android:clickable="true"
        android:contentDescription="@string/open_application"
        android:focusable="true"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/open_application"
            android:text="@string/getting_started"
            android:textColor="@color/md_white_1000" />


    </LinearLayout>

</RelativeLayout>