<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/usernameAdd"
        android:layout_width="276dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Username"
        android:ems="10"
        android:hint="@string/addUsername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordAdd"
        android:layout_width="276dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/addPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameAdd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/login"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTxtView" />

    <TextView
        android:id="@+id/registrationTxtView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/don_t_have_any_account_yet"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/passwordAdd"
        tools:layout_editor_absoluteX="85dp" />


    <Button
        android:id="@+id/regBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:textColor="@color/button"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/registrationTxtView"
        app:layout_constraintTop_toBottomOf="@+id/passwordAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>