<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_skip"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:textAllCaps="true" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/text_skip"
        android:clipToPadding="false"
        android:overScrollMode="never" />

    <RelativeLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/background_color"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/pageIndicator"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@color/background_color"
            android:contentDescription="@string/page"
            app:tabBackground="@drawable/onboarding_viewpager_selector_blue"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTint="@color/md_grey_900"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</RelativeLayout>